<resources>
    <string name="app_name">PetLink</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="starred_jobs">Jobs Interested In</string>
    <string name="posted_jobs">My Postings</string>
    <string name="new_job">Create New Posting</string>
    <string name="upcoming_jobs">Current Jobs</string>
    <string name="notification">Notifications</string>
    <string name="profile">Edit User Profile</string>
    <string name="title_activity_new_job">NewJobActivity</string>
    <string name="title_activity_starred_job">StarredJobActivity</string>
    <string name="title_activity_upcoming_job">UpcomingJobActivity</string>
    <string name="title_activity_posted_job">PostedJobActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_edit_user_profile">EditUserProfileActivity</string>
    <string name="string_find">Find Jobs based on their Description</string>
    <string name="string_posted">Posted by: </string>
    <string name="string_pay">Payment: £</string>
    <string name="string_description">Description</string>
    <string name="edit_personal_info">Edit your Personal Info</string>
    <string name="edit_picture">Click to select Picture</string>
    <string name="edit_pets">Edit your Pets</string>
    <string name="edit_address">Address</string>
    <string name="bio">Bio: </string>
    <string name="edit_pet_name">Pet Name</string>
    <string name="post_job">Post a New Job</string>
    <string name="start_time">Start</string>
    <string name="end_time">End</string>
    <string name="title_activity_posting_job">PostingJobActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_selected_job">SelectedJobActivity</string>
    <string name="petName">Name: </string>
    <string name="petBreed">Breed: </string>
    <string name="petAge">Age: </string>
    <string name="location">Location:</string>
    <string name="startingTime">Start time:</string>
    <string name="endTime">End Time:</string>
    <string name="sumbitJobRequest">Show Interest</string>
    <string name="title_activity_my_postings">MyPostingsActivity</string>
    <string name="content_desc_posting_image">Posting image</string>
    <string name="job_duration">%1$s - %2$s</string>
    <string name="title_activity_my_posted_job">MyPostedJob</string>
    <string name="my_posted_job_sitters_button">See Sitters Interested</string>
    <string name="my_posted_job_price">Price: </string>
    <string name="success">You are showing interest for this job</string>
    <string name="successRemoved">You have stopped showing interest in this job</string>
    <string name="delete_posting_dialog_title">Confirm</string>
    <string name="delete_posting_dialog_message">Are you sure you want to delete this posting?</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sitters_interest">Sitters Interested</string>
    <string name="agreed_jobs">Jobs agreed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requests">Send Requests</string>
    <string name="updates">View Updates</string>
    <string name="agreed_owner">Pet Owner</string>
    <string name="agreed_sitter">Pet Sitter</string>
    <string name="image_owner">Pet Owner image</string>
    <string name="image_sitter">Pet Sitter image</string>
    <string name="title_activity_jobs_interested_in">JobsInterestedIn</string>
    <string name="request_location_toast">LOCATION REQUEST SEND SUCCESSFULLY</string>
    <string name="request_photo_toast">PHOTO REQUEST SEND SUCCESSFULLY</string>
    <string name="swipeSittersInterested">Swipe Right to accept a Sitter, or swipe Left to decline a Siiter</string>
    <string name="swipeRequests">Swipe Right to send a Photo Request or swipe Left to send a Location Request</string>
    <string name="name">Name: </string>
    <string name="payment">Payment: </string>
    <string name="phone">Phone Number: </string>
    <string name="your_profile">Your Profile</string>
    <string name="rating">Rating: </string>
    <string name="pets">Pets</string>
    <string name="save">Save</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="invalid_payment">Invalid payment</string>
    <string name="successfully_updated">Successful Profile Update</string>
    <string name="addPet">Add Pet</string>
    <string name="title_activity_add_pets">AddPetsActivity</string>
    <string name="uploadPhoto">Upload a Photo</string>
    <string name="your_pet">Add your Pet</string>
    <string name="species">Species: </string>
    <string name="invalid_fields">Please fill all the fields</string>
    <string name="error_uploading">There was an error uploading</string>
    <string name="invalid_age">Please type an integer for age</string>
    <string name="title_activity_edit_my_posted_job">EditMyPostedJob</string>
    <string name="history">History</string>
    <string name="clickToRate">Please click on a completed job to leave a rating for the Pet Sitter</string>
    <string name="thanks">Thanks for the rating!</string>
    <string name="clickToView">Click on an on going job to check Location or Photo Updates</string>
    <string name="title_activity_requested_photos_view">RequestedPhotosViewActivity</string>
    <string name="title_activity_requested_location_view">RequestedLocationViewActivity</string>
    <string name="clickToUpdateLocation">These posts require Location update. Please click on them to update them.</string>
    <string name="clickToUpdatePhoto">These posts require Photo update. Please click on them to update.</string>
    <string name="capture">Capture</string>
    <string name="send_updates">Send Updates</string>
    <string name="invalid_pet">Please selected at least 1 Pet</string>
    <string name="successfully_created">Posting successfully created</string>
    <string name="onLocation">Turn On Location Fetching</string>
    <string name="offLocation">Turn Off Location Fetching</string>
    <string name="invalid_location">Please click on the Map to enter your location</string>
    <string name="payment_perhour">Payment per Hour</string>
    <string name="title_activity_view_sitters_profile">ViewSittersProfileActivity</string>
    <string name="sitters_profile">Sitter\'s Profile</string>
    <string name="successfully_updated_posting">Posting successfully updated</string>
    <string name="job_complete">Job Complete! If you would like you can leave a rating via your History</string>
    <string name="string_petOwner">Pet Owner</string>
    <string name="string_telephone">Telephone:</string>
    <string name="complete_button">Complete Job</string>
    <string name="string_petsitter">Pet Sitter:</string>
</resources>
