<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sitters"
        android:icon="@drawable/sitters"
        android:title="@string/sitters_interest" />

    <item
        android:id="@+id/navigation_agreedJobs"
        android:icon="@drawable/jobs_agreed"
        android:title="@string/send_updates" />

    <item
        android:id="@+id/navigation_requests"
        android:icon="@drawable/requests"
        android:title="@string/requests" />

    <item
    android:id="@+id/navigation_updates"
    android:icon="@drawable/updates"
    android:title="@string/updates" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history_icon"
        android:title="@string/history" />

</menu>
