<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image"
        android:layout_width="78dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/name"
            android:layout_width="130dp"
            android:layout_height="62dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="12dp"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/payment"
        android:layout_width="136dp"
        android:layout_height="34dp"
        android:layout_marginStart="249dp"
        android:layout_marginTop="16dp"
        android:text="@string/string_pay"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/posted"
        android:layout_width="136dp"
        android:layout_height="22dp"
        android:layout_marginStart="249dp"
        android:layout_marginTop="61dp"
        android:text="@string/string_posted"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>