<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/constraintLayout">

    <ImageView
        android:id="@+id/petImage"
        android:layout_width="163dp"
        android:layout_height="181dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/petName"
        android:layout_width="130dp"
        android:layout_height="62dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="16dp"
        android:text="@string/petName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/petBreed"
        android:layout_width="136dp"
        android:layout_height="34dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="92dp"
        android:text="@string/petBreed"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/petAge"
        android:layout_width="136dp"
        android:layout_height="22dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="144dp"
        android:text="@string/petAge"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>