<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_home" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/expand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:backgroundTint="@color/colorPrimary"
        app:fab_addButtonColorNormal="@color/colorPrimary"
        app:fab_labelStyle="@style/floatingMenu">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/starred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@color/colorPrimary"
            app:backgroundTint="@color/colorPrimary"
            app:fab_size="mini"
            app:fab_title="@string/starred_jobs" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/posted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@color/colorPrimary"
            app:backgroundTint="@color/colorPrimary"
            app:fab_size="mini"
            app:fab_title="@string/posted_jobs" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/newJobs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@color/colorPrimary"
            app:backgroundTint="@color/colorPrimary"
            app:fab_size="mini"
            app:fab_title="@string/new_job" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@color/colorPrimary"
            app:backgroundTint="@color/colorPrimary"
            app:fab_size="mini"
            app:fab_title="@string/upcoming_jobs" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>