<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgreedJobInfoActivity">

    <TextView
        android:id="@+id/petOwner"
        android:layout_width="81dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobPrice" />

    <TextView
        android:id="@+id/petSitter"
        android:layout_width="79dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petOwner" />

    <TextView
        android:id="@+id/ownerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/string_petOwner"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/petOwner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobPrice"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/telephoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/string_telephone"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/petOwner"
        app:layout_constraintEnd_toStartOf="@+id/jobEndTime"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobPrice"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sitterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/string_petsitter"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/petSitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petOwner"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/descLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/string_description"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/jobDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:text="@string/location"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/jobLocation"
        app:layout_constraintStart_toEndOf="@+id/descLabel" />

    <TextView
        android:id="@+id/startLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/startingTime"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/jobStartTime"
        app:layout_constraintStart_toEndOf="@+id/jobDescription"
        app:layout_constraintTop_toBottomOf="@+id/jobLocation"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/endLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/endTime"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/jobEndTime"
        app:layout_constraintStart_toEndOf="@+id/priceLabel"
        app:layout_constraintTop_toBottomOf="@+id/jobStartTime"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/my_posted_job_price"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/jobPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobDescription"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/petsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/pets"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/myJobPetsRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petSitter"
        app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/jobDescription"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jobLocation"
            android:layout_width="158dp"
            android:layout_height="54dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jobStartTime"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobLocation" />

    <TextView
        android:id="@+id/jobEndTime"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jobPrice"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toTopOf="@+id/myJobPetsRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobDescription"
        app:layout_constraintVertical_bias="0.071" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/myJobPetsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobEndTime" />

    <Button
        android:id="@+id/completeJobButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="@string/complete_button"
        android:textColor="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myJobPetsRecyclerView"
        app:layout_constraintVertical_bias="0.547" />

    <TextView
        android:id="@+id/ownerPhone"
        android:layout_width="80dp"
        android:layout_height="22dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toEndOf="@+id/petOwner"
        app:layout_constraintTop_toBottomOf="@+id/jobPrice" />

    <TextView
        android:id="@+id/sitterPhone"
        android:layout_width="83dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/myJobPetsRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/petSitter"
        app:layout_constraintTop_toBottomOf="@+id/ownerPhone"
        app:layout_constraintVertical_bias="0.333" />


</android.support.constraint.ConstraintLayout>